[package]

name = "Asteroids Plus"
version = "0.0.1"
authors = [ "jazz2rulez@gmail.com" ]

[[bin]]

name = "asteroids"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2.git"
# git = "https://github.com/PistonDevelopers/rust-sdl2.git"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.lazy_static]
git = "https://github.com/Kimundi/lazy-static.rs.git"
